# minio_manager_service

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO_CEPH.md  alembic.ini  docker-compose.yml  port-cache-commits.md  pyproject.toml  pytest.ini
.github/workflows/: build_docker_image.yml  test.yml
configs/pgbouncer/: pgbouncer.ini  userlist.txt
configs/trino/: access-control.properties
docs/: design.md  postgres-setup.md
integration_tests/: README.md  conftest.py  ensure_test_prerequisites.py  pytest.ini  run_tests.sh
integration_tests/fixtures/: __init__.py  auth.py  credential_db.py  groups.py  polaris_verification.py  users.py  verification.py
integration_tests/tests/: test_health.py
integration_tests/utils/: __init__.py  cleanup.py  minio_admin.py  minio_client.py  paths.py  unique.py
kubernetes/: configmap.yaml  deployment.yaml  service.yaml
migrations/: env.py  minio_to_s3_inline_iam.py  minio_user_policies_to_s3_inline.py
migrations/versions/: 001_initial_credentials.py  002_tenant_metadata.py  003_add_tenant_website.py  004_polaris_credentials.py  005_polaris_namespace_acls.py
scripts/: backfill_tenant_metadata.py  init-mms-db.sh  migrate.sh  trino-svc-bootstrap.sh  trino-svc-policy.json
src/: main.py
src/credentials/: polaris_service.py  polaris_store.py  s3_service.py  s3_store.py  service.py  store.py
src/minio/: README.md
src/polaris/: constants.py  credential_service.py  credential_store.py  namespace_acl_manager.py  (+6 more)
test_scripts/: README.md  group_manager_integration.py  minio_to_s3_inline_iam_integration.py  mms_routes_integration.py  policy_manager_integration.py  s3_client_integration.py  s3_iam_integration.py  user_manager_integration.py
tests/: conftest.py  test_main.py
(+165 files in other folders)
