[project]
name = "minio-manager-service"
version = "0.1.0"
description = "MinIO Manager Service for BERDL"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "pydantic==2.12.5",
    "aiohttp==3.13.3",
    "cacheout==0.16.0",
    "aiobotocore==3.2.1",
    "redis==7.3.0",
    "ruff==0.15.6",
    "psycopg[binary]==3.3.3",
    "psycopg-pool==3.3.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "ipython==9.10.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
]

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
